# sigmap-codex-bridge

./: .gitignore  CHANGELOG.md  GPT56_EVIDENCE.md  README.md  SIGMAP_CODEX_BRIDGE_PLAN.md  VERSIONED_COMMIT_PLAN.md  pyproject.toml  sigmap-bridge
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmark_packs/pypa-sampleproject-v1/: README.md  pack.yaml
benchmarks/dashboard/: build-week-2026.json  build-week-2026.md
benchmarks/gates/: conservative-example-v1.yaml
benchmarks/tasks/: artifact-run-status.yaml  markdown-comparisons.yaml  report-failure-exit.yaml
docs/: benchmark-specification.md  challenges-and-limitations.md  evidence-dashboard.md  independent-replication.md  judge-quickstart.md  paired-analysis-and-gates.md  provenance-attestations.md  resumable-execution.md  stability-and-migration.md
docs/adr/: 0001-codex-context-injection.md
docs/submission/: architecture.md  demo-script.md  demo_and_screenshot_guide.md  devpost-submission.md  (+2 more)
schemas/: benchmark-comparison-v1.schema.json  benchmark-execution-state-v1.schema.json  benchmark-gate-policy-v1.schema.json  benchmark-gate-result-v1.schema.json  benchmark-pack-v1.schema.json  benchmark-report-v1.schema.json  benchmark-run-artifact-v1.schema.json  benchmark-task-v1.schema.json  evidence-dashboard-v1.schema.json  provenance-attestation-v1.schema.json
submission/: build-week-2026.json
tests/: git_helpers.py  test_analysis_gates.py  test_audit.py  test_benchmark_schema.py  test_bridge_cli.py  test_bridge_isolation.py  test_cli_benchmark.py  test_cli_integrity.py  test_codex.py  test_demo.py  test_doctor.py  test_execution.py  test_experiment.py  test_git.py  test_live_smoke.py  test_pack.py  test_package.py  test_preflight.py  test_process.py  test_reporting.py  test_scoring.py  test_sigmap.py  test_stable_v1.py  test_submission.py  test_worktree.py
(+50 files in other folders)
