[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmap-codex-bridge"
version = "0.3.0"
description = "Reproducible Codex context A/B evaluation and evidence layer powered by SigMap"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Manoj Mallick" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "PyYAML>=6.0,<7",
]

[project.scripts]
sigmap-bridge = "sigmap_codex_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
